# monitord

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build_docs.sh  build_landing_page.py  landing_page.html  monitord.conf  monitord.service  monitord.timer
.github/: dependabot.yml  monitord-varlink-ci.conf
.github/workflows/: ci.yml  clippy.yml  docs.yml  publish.yml  release-binaries.yml  systemd-enum-sync.yml  varlink-integration.yml
docs/: CNAME  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/implementors/int_enum/: trait.IntEnum.js
docs/monitord/: all.html  constant.DEFAULT_DBUS_ADDRESS.html  enum.MonitordError.html  fn.print_stats.html  fn.stat_collector.html  index.html  sidebar-items.js  struct.CollectorTiming.html  struct.MachineStats.html  struct.MonitordStats.html
docs/monitord/boot/: fn.update_boot_blame_stats.html  index.html  sidebar-items.js  type.BootBlameStats.html
docs/monitord/config/: enum.MonitordConfigError.html  enum.MonitordOutputFormat.html  index.html  sidebar-items.js  struct.BootBlameConfig.html  struct.Config.html  struct.DBusStatsConfig.html  struct.MachinesConfig.html  struct.MonitordConfig.html  struct.NetworkdConfig.html  struct.Pid1Config.html  struct.SystemStateConfig.html  struct.TimersConfig.html  struct.UnitsConfig.html  struct.VarlinkConfig.html  struct.VerifyConfig.html
docs/monitord/dbus_stats/: enum.MonitordDbusStatsError.html  fn.parse_dbus_stats.html  fn.update_dbus_stats.html  index.html  sidebar-items.js  struct.CurMaxPair.html  struct.DBusBrokerCGroupAccounting.html  struct.DBusBrokerPeerAccounting.html  struct.DBusBrokerUserAccounting.html  struct.DBusStats.html
docs/monitord/json/: enum.JsonFlatValue.html  fn.flatten.html  fn.flatten_hashmap.html  index.html  sidebar-items.js
docs/monitord/logging/: enum.LogLevels.html  fn.setup_logging.html  index.html  sidebar-items.js
docs/monitord/machines/: enum.MonitordMachinesError.html  fn.filter_machines.html  fn.get_machines.html  fn.update_machines_stats.html  index.html  sidebar-items.js  type.MachineConnections.html
docs/monitord/networkd/: constant.NETWORKD_STATE_FILES.html  enum.AddressState.html  enum.AdminState.html  enum.BoolState.html  enum.CarrierState.html  enum.MonitordNetworkdError.html  enum.OnlineState.html  enum.OperState.html  fn.parse_interface_state_files.html  fn.parse_interface_stats.html  fn.update_networkd_stats.html  index.html  sidebar-items.js  struct.AddressStateIter.html  struct.BoolStateIter.html  (+6 more)
docs/search.index/: 007767f3fd1c.js  01192993d0.js  01baf85f6373.js  01c282d409fa.js  01cd3a5af7da.js  02228f3f179a.js  022593c19ac2.js  02ab9a91d2.js  02bbc43058c6.js  02f5a3422c30.js  02f8f8472f94.js  03c33ede662d.js  0417c7f5ae75.js  0433840c9785.js  0548b0e2ccf3.js  0595267f47.js  05a397d2c6e3.js  0627397ed65a.js  065ddd4577ec.js  06df3add05ca.js  0718926e4e10.js  073155f436.js  075470f645be.js  07d1a616fe75.js  0820aa71a7f2.js  087eb0c637d3.js  089e1826b9.js  08ba146288.js  08cee9ea4e4b.js  0902cd2b4bd0.js  092d6a3ff7e5.js  0975f4133500.js  099793c3f9c5.js  0a0027debc79.js  0a64b6f010f0.js  0a6ca6db5409.js  0abd4d9f7e2e.js  0aff4da2274b.js  0b5febc3b56b.js  0bad01a62485.js  (+549 more)
logos/: monitord-logo_1.pxd
src/: boot.rs  config.rs  dbus_stats.rs  json.rs  lib.rs  logging.rs  machines.rs  main.rs  network_dbus.rs  networkd.rs  pid1.rs  system.rs  timer.rs  unit_constants.rs  unit_dbus.rs  units.rs  varlink_networkd.rs  varlink_units.rs  verify.rs
src/dbus/: mod.rs  systemd.rs  zbus_machine.rs  zbus_machines.rs  zbus_networkd.rs  zbus_service.rs  zbus_systemd.rs  zbus_timer.rs  zbus_unit.rs
src/varlink/: metrics.rs  network.rs
tests/: systemd_enum_sync.rs
(+240 files in other folders)
