[package]
name = "monitord"
version = "0.8.2"
authors = ["Cooper Ry Lees <me@cooperlees.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"
documentation = "http://monitord.xyz/"
repository = "https://github.com/cooperlees/monitord"
edition = "2021"
description = """
monitord ... know how happy your systemd is! 😊
"""
categories = ["network-programming", "os::linux-apis"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
configparser = { version = "3.0.3", features = ["indexmap"] }
dbus = "0.9.3"
indexmap = "2.2"
int-enum = "0.5.0"
itertools = "0.11.0"
procfs = "0.15.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
struct-field-names-as-array = "0.1.3"
strum = "0.26"
strum_macros = "0.21"
tracing = "0.1"
tracing-core = "0.1"
tracing-glog = "0.4"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.3.0"

[profile]
release = { strip = "symbols", lto = "thin", opt-level = "z" }
