[package]
name = "monitord"
version = "0.11.1"
authors = ["Cooper Ry Lees <me@cooperlees.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"
documentation = "http://monitord.xyz/"
repository = "https://github.com/cooperlees/monitord"
edition = "2021"
description = """
monitord ... know how happy your systemd is! 😊
"""
categories = ["network-programming", "os::linux-apis"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
configparser = { version = "3.0.3", features = ["indexmap"] }
indexmap = "2.2"
int-enum = "1.1"
itertools = "0.13.0"
procfs = "0.15.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_tuple = "1.0.0"
struct-field-names-as-array = "0.3"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-glog = "0.4"
tracing-subscriber = "0.3"
zbus = { version = "4.4.0", features = ["p2p", "tokio"] }
zvariant = "4.2.0"
zvariant_derive = "4.2.0"

[dev-dependencies]
tempfile = "3.3.0"

[profile]
release = { strip = "symbols", lto = "fat", opt-level = "z", codegen-units = 1 }
