[package]
name = "monitord"
version = "0.14.1"
authors = ["Cooper Ry Lees <me@cooperlees.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"
documentation = "http://monitord.xyz/"
repository = "https://github.com/cooperlees/monitord"
edition = "2021"
description = """
monitord ... know how happy your systemd is! 😊
"""
categories = ["network-programming", "os::linux-apis"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "std", "help"], default-features = false }
configparser = { version = "3.0.3", features = ["indexmap"] }
indexmap = "2.9"
int-enum = "1.1"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_tuple = "1.0.0"
struct-field-names-as-array = "0.3"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
tokio = { version = "1.41.0", features = ["fs", "rt", "rt-multi-thread", "macros", "tracing", "time", "sync"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-glog = "0.4"
tracing-subscriber = "0.3"
zbus = { version = "5.1.1", features = ["tokio", "blocking-api"], default-features = false }
zvariant = "5.1.0"
zvariant_derive = "5.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1.37.0", features = ["test-util"] }

[profile]
release = { strip = "symbols", lto = "fat", opt-level = "z", codegen-units = 1 }
